ini aplikasi to do list

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "SongListApp",
-  "displayName": "SongListApp"
+  "name": "RidwanMalikTestTodolist",
+  "displayName": "RidwanMalikTestTodolist"
 }
