--- a/ios/SongListApp.xcodeproj/xcshareddata/xcschemes/SongListApp.xcscheme
+++ b/ios/SongListApp.xcodeproj/xcshareddata/xcschemes/SongListApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SongListApp.app"
-               BlueprintName = "SongListApp"
-               ReferencedContainer = "container:SongListApp.xcodeproj">
+               BuildableName = "RidwanMalikTestTodolist.app"
+               BlueprintName = "RidwanMalikTestTodolist"
+               ReferencedContainer = "container:RidwanMalikTestTodolist.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SongListAppTests.xctest"
-               BlueprintName = "SongListAppTests"
-               ReferencedContainer = "container:SongListApp.xcodeproj">
+               BuildableName = "RidwanMalikTestTodolistTests.xctest"
+               BlueprintName = "RidwanMalikTestTodolistTests"
+               ReferencedContainer = "container:RidwanMalikTestTodolist.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SongListApp.app"
-            BlueprintName = "SongListApp"
-            ReferencedContainer = "container:SongListApp.xcodeproj">
+            BuildableName = "RidwanMalikTestTodolist.app"
+            BlueprintName = "RidwanMalikTestTodolist"
+            ReferencedContainer = "container:RidwanMalikTestTodolist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SongListApp.app"
-            BlueprintName = "SongListApp"
-            ReferencedContainer = "container:SongListApp.xcodeproj">
+            BuildableName = "RidwanMalikTestTodolist.app"
+            BlueprintName = "RidwanMalikTestTodolist"
+            ReferencedContainer = "container:RidwanMalikTestTodolist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
