--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SongListApp",
+  "name": "RidwanMalikTestTodolist",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,16 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.4",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.4",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
